<resources>
    <string name="app_name">Local Guide</string>
    <string name="logo_name">Explore and Innovate</string>
    <string name="slogan_name">We will help you find out the path</string>
    <string name="powered_by">Powered By Tahbib and Toufik</string>

    <!-- Strings for On Boarding Screen -->
    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you do not have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- String For DashBoard -->

    <string name="hotels">HOTELS</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="shops">SHOPS</string>
    <string name="banks">BANKS</string>
    <string name="airports">EDUCATION</string>


    <!-- Tiles and Descriptions -->

    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


    <!-- String For Navigation -->

    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="education">EDUCATION</string>
    <string name="share">SHARE</string>
    <string name="rate_us">RATE US</string>

    <string name="car_rent">CAR RENT</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="hospitals">HOSPITALS</string>
    <string name="library">LIBRARY</string>
    <string name="atm">ATMs</string>
    <string name="mosque">MOSQUE</string>
    <string name="resort">RESORT</string>


    <string name="sign_up">SIGN UP</string>
    <string name="retailer_heading">GROW YOUR BUSINESS</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="how_we_work">HOW WE WORK</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="enter_full_name">ENTER FULL NAME</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">PHONE NUMBER</string>
    <string name="todo">TO DO</string>
    <string name="otp_code_text">CODE</string>
    <string name="otp_verification_text">VERIFICATIONS</string>
    <string name="otp_description_text">Enter one Time Password</string>
    <string name="verify_code">Verify Code</string>

</resources>