<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Common.LoginSignup.VerifyOTP"
    android:id="@+id/scroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
        <ImageView
            android:id="@+id/close_btn_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToHomeFromOTP"
            android:padding="5dp"
            android:src="@drawable/general_close_icon"
            android:tint="@color/black"
            android:contentDescription="@string/todo"
            android:transitionName="transtion_close_btn"/>
        <TextView
            android:id="@+id/otp_code_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            android:includeFontPadding="false"
            android:text="@string/otp_code_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="100sp"
            android:transitionName="transition_otp_code_text"/>
        <TextView
            android:id="@+id/otp_verification_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            android:includeFontPadding="false"
            android:text="@string/otp_verification_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:transitionName="transition_otp_verification"/>
        <TextView
            android:id="@+id/otp_description_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            android:includeFontPadding="false"
            android:text="@string/otp_description_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:transitionName="transition_descripton"/>
        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="#65EAEAEA"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="40dp"
            app:itemRadius="5dp"
            app:itemWidth="40dp"
            app:lineColor="@color/colorAccent"
            app:lineWidth="1dp" />
        <Button
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/DarkViolet"
            android:text="@string/verify_code"
            android:onClick="callNextScreenFromOTP"
            android:textColor="@color/black"
            android:transitionName="transition_OTP_screen" />
    </LinearLayout>

</ScrollView>