<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.AllCategories"
    android:background="@color/lightWhite">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            
            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/general_back_icon"
                android:padding="15dp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_icon"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
            
        </RelativeLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CATEGORIES"
            android:textSize="30sp"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            android:textAllCaps="true"
            android:padding="10dp"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_car_background"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_rent"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:textColor="@color/black"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/categories_rent_car_icon"
                android:layout_marginTop="30dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_restaurant_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_restaurant_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurants"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categoriess_hospital_background"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospitals"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:textColor="@color/lightWhite"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/dr"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_shop_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_shop_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shops"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!-- 4 times -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_library_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:padding="25dp"
                    android:text="@string/library"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/black" />

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/categories_book_icon"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_atm_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/atm"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atm"
                    android:textSize="40sp"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_mosjid_background"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mosque"
                    android:textSize="25sp"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:textColor="@color/white"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/mosque"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_resort_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/resort"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resort"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>









    </LinearLayout>

</ScrollView>